# Anilist-CMD

./: CMakeLists.txt
include/: Backend.h  Date.h  Draw.h  EnumMapping.h  Media.h  MediaBuild.h  MediaFormat.h  MediaSeason.h  MediaSort.h  MediaSource.h  MediaStatus.h  MediaType.h  Title.h  UI.h  UIService.h
resources/: myList.json
src/: Backend.cpp  Date.cpp  Draw.cpp  EnumMapping.cpp  Main.cpp  Media.cpp  MediaBuild.cpp  Title.cpp  UI.cpp  UIService.cpp
